...

export type RootStackParamList = {
  MainTabs: undefined;
  Home: undefined;
  PerformanceMonitor: undefined;
  Settings: undefined;
  Profile: undefined;
  Analytics: undefined;
  ProductList: undefined;
  ProductDetail: {
    product: {
      id: string;
      name: string;
...
  Payments: undefined;
  WasteCollection: undefined;
  ARContainerScanner: undefined;
  AIConfigScreen: undefined;
  Main: undefined;
  Login: undefined;
  Register: undefined;
  ForgotPassword: undefined;
  ARContainerScan: undefined;
  RecyclePointSelection: undefined;
  MaterialsContribution: undefined;
  CommunityChallenge: undefined;
  SmartHome: undefined;
...
